tests/builds/fail/inheritence_self_inheritence.cpl
struct MyStruct extends MyStruct {
	int a;
	int b;
};

int main()
{
	return 0;
}
